--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -28,14 +28,17 @@
         </svg>
         <!-- Example robot diagram, arm moves when encoder value changes -->
         <svg id="robot-diagram" width="332" height="450">
-            <text x="40" y="340">Example SVG Robot Diagram</text>
-            <rect x="75" y="360" width="230" height="40"></rect>
-            <rect x="85" y="370" width="210" height="40"></rect>
-            <rect id="robot-arm" x="5" y="375" width="80" height="10"></rect>
+            <!-- <text x="40" y="340">Example SVG Robot Diagram</text> -->
+            <!-- <rect x="75" y="360" width="230" height="40"></rect> -->
+            <!-- <rect x="85" y="370" width="210" height="40"></rect> -->
+            <rect id="robot-arm" x="-25" y="370" width="80" height="10"></rect>
+            <rect id="robot-lift" x="75" y="230" width="20" height="150"></rect>
+            <rect x="55" y="240" width="20" height="140"></rect>
             <circle cx="100" cy="410" r="25"></circle>
-            <circle cx="260" cy="410" r="25"></circle>
+            <circle cx="190" cy="410" r="25"></circle>
+            <circle cx="280" cy="410" r="25"></circle>
             <rect x="60" y="380" width="250" height="30"></rect>
-            <text id="team" x="185" y="405" text-anchor="middle">####</text>
+            <!-- <text id="team" x="185" y="350" text-anchor="middle">967</text> -->
         </svg>
     </article>
     <!-- The sidebar of the dashboard. Designed for smaller control elements like selection boxes and small buttons. -->
