--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FRC Dashboard</title>
+    <title>FRC Team 967 Dashboard</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
